# symbolic-music-generation

./: .gitignore  README.md  find_mean_variance.py  generate_music.py  model.py  preprocessing.py  pyproject.toml  test.ipynb  test2.py  tokenizer.py  train.py  upload.py  utils.py
notebooks/: test.ipynb  test_aria.ipynb  test_aria_harmony.ipynb  test_hf.ipynb  track.ipynb
src/: model.py  preprocessing.py  test_tokenizer.py  tokenizer.py  train.py  train_aria.py  train_model_new.py  upload.py  utils.py
src/model/: config.py  generic.py  import_utils.py  model.py  modeling.py  modeling_layers.py  modeling_rope_utils2.py
