[project]
name = "symbolic-music-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariautils",
    "jupyter>=1.1.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.3",
    "miditok>=3.0.6",
    "mido>=1.3.3",
    "numpy>=2.3.1",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "python-rtmidi>=1.5.8",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
]

[tool.uv.sources]
ariautils = { git = "https://github.com/EleutherAI/aria-utils.git" }
